refractor: Some fixes and cleanup (#98)
* fix: gitignore

* fix(deps): actually add player particles dependency

* refactor(gradle): add minix catalog for libs

* chore(gradle): Update to 7.6

* fix: ClassCastException

* fix: ClassNotFoundException

It seems just having an import for floodgate was causing an error, why? I have no clue but this immediately fixed it

* fix: ArrayIndexOutOfBoundsException

* refactor: Add max attempts to region check

* fix: Incorrect return types

* refactor(gradle): Change build dir for subprojects

* fix: Use interface

* refactor: Better error handling

* fix: Incoming ClassNotFoundException because of floodgate

* refactor: Cleanup some more commands and also fix some incorrect handling of futures

* chore: Update lands hook

* refactor: Remove deprecated methods

* fix: Return failed future instead of throwing

* refactor: Cleanup the API

Adds annotations for nullability, finals for parameters and some other cleanup

* fix: Remove arrow lib

* feat: Slimjar for runtime dependency resolution

* chore: Merge gradle changes from minimessage branch

* fix: update gradle stuff

* refactor: Remove exceptions that aren't possibly thrown

* refactor: Return Immutable copies of maps

* refactor: No longer need to check for 1.7

* refactor: Checking the class is already covered by the cast

* refactor: PluginHooks

* refactor: Just fucking full send im tired

* refactor: Use authLib instead of paperweight still for GameProfiles

* refactor: Replace local metrics class with library for runtime download

* refactor: Remove unused worldBorder variable

* refactor: final class and executors

* refactor: cleanup hackTheMainFrame

* chore: Change supported versions

* chore: Remove unthrown exceptions

* fix: reasons are nullable

* fix: Use UnloadedWorldException

* fix: Remove unused enum

* refactor: Add more annotations and mark classes as final

* chore: mor